item-value.js: add cache in chrome.storage.local.

--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
     ],
 
     "permissions": [
+        "storage",
         "http://*.dota2lounge.com/*",
         "http://steamcommunity.com/market/*"
     ]
