--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
 
     "content_scripts": [
         {
+            "matches": ["http://*.dota2lounge.com/*"],
+            "js": ["util.js"]
+        },
+        {
             "matches": ["http://*.dota2lounge.com/myprofile"],
             "js": ["async.js", "jquery-2.1.1.js", "jquery.tablesorter.min.js", "bet-stats.js"],
             "css": ["bet-stats.css"]
